	  logic is incomplete and really nothing more than a thought experiment
	  to determine the feasibility of the P-code binary format (2014-5-7).
	* drivers/sensors/Make.defs:  Correct build dependency.  Sourceforge
	  ticket #41 from Kosma Moczek (2014-5-8).
	* drivers/serial.c, include/nuttx/serial.h, arch/arm/src/stm32/stm32_serial.c
	  and minor updates to all other drivers using the serial interface:  Add an
	  rxflowcontrol method to the serial interface to better support RX flow control.
	  From Jussi Kivilinna (2014-5-8).
	* arch/arm/include/stm32 and src/stm32:  Add support for the STM32152 and
	  STM32162 Medium+ density parts (plus miscellaneous other improvements to
	  the original STM32151 logic).  From Jussi Kivilinna and Sami Pelkonen
	  (2014-5-8).
	* binfmt/binfmt_dumpmodule.c, binfmt_loadmodule.c, binfmt_unloadmdoule.c,
	  builtin.c, elf.c, nxflat.c, pcode.c, and include/nuttx/binfmt/binfmt.h:
	  Extend the binfmt interface to handle error conditions where format-specific
	  binfmt clean-up is needed in the event of error conditions.  This is needed
	  by the P-Code binfmt (2014-5-8).
	* binfmt/libpcode, pcode.c, include/nuttx/poff.h, and binfmt/pcode.h:
	  Now uses apps/interpreters/prun and is basically functional.  More work
	  is needed because (1) it is too coupled with apps/ and (2) will not work
	  with CONFIG_NUTTX_KERNEL (2014-5-9).
	* arch/arm/src/stm32/stm32_i2c.c:  Bring in PX4 fix for I2C in very high
	  noise environments or with rogue perpipherals.  Taken from the PX4 commit
	  099b2017ccfa0fc7696f168db2a0c2e13fe5edbc by Tridge here:
	  https://github.com/PX4/NuttX (2014-5-10).
	* include/nuttx/video/rgbcolors.h:  Fix typo in several macros: RBG -> RGB.
	  (2014-5-12).
	* drivers/mtd/ramtron.c: Add support for Fujitsu MB85RS1MT part.  From
	  Charles Ash (2014-5-12).
	* configs/sam4e-ek/src/sam_ili9325.c:  Add an LCD driver for the SAM4E-EK
	  board.  Untested on initial check-in (2014-5-13).